k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fincorp
  labels:
    name: fincorp
    app.kubernetes.io/part-of: fincorp
