k8s/03-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fincorp
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
